
methylKit 0.3.2
--------------

NEW FUNCTIONS AND FEATURES



IMPROVEMENTS AND BUG FIXES

* cov.bases option in tileMethylCounts() now works

* methylRaw,methylBase and methylDiff objects have a new slot 'resolution', which designates
  whether methylation information is base-pair resolution or regional resolution

* getCoverageStats() & getMethylationStats() now print the sample ids and methylation context automatically in the 
  title when plotting

* destrand option of unite() function will be over-riden when methylRawList to be united contains regions rather than bases

* unite() function checks if supplied elements of methylRawList object have the same context,assemlby and resolution before
  uniting data sets.

* validity function checking the format of the data for a methylRaw object is implemented

methylKit 0.3.1
--------------

IMPROVEMENTS AND BUG FIXES

* syntax error when fisher.test applied at calculateMethDiff() is fixed.